[project]
name = "scripts"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albi0>=0.5.0",
    "gitpython>=3.1.45",
    "pytz>=2025.2",
    "solaris",
    "xmltodict>=1.0.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
check-seer-assets = "scripts.seer_unity_assets.check:main"
update-seer-assets = "scripts.seer_unity_assets.update:main"
update-config-sources = "scripts.config_sources.update:main"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
reportShadowedImports = false
disableBytesTypePromotions = true


[tool.uv.sources]
solaris = { git = "https://github.com/SeerAPI/solaris" }
